--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".presentation.MovieListActivity">
+        android:theme="@style/AppTheme"
+        android:name=".presentation.MovieListApplication">
+
+        <activity android:name=".presentation.list.MovieListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
