--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,10 @@ dependencies {
 
     //Project LIBS
     compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile "io.reactivex.rxjava2:rxjava:2.0.6"
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
 }
