--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 // Required because retrolambda is on maven central
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 apply plugin: 'com.android.application'
@@ -64,4 +65,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.github.deano2390:FlowTextView:2.0.5'
+
 }
